# elysium_launcher

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_JP.md  README_RU.md  build.sh  launch.py  launcher.py  main.cpp  run.sh  start-dev.sh
app/: package-lock.json  package.json  vite.config.ts
app/src/: main.tsx
app/src/providers/: InvokeProvider.tsx
app/src/utils/: invoke.ts
include/: bindings.hpp  el-core-bindings.h
libs/el-core-lib/: Cargo.toml  cbindgen.toml
libs/el-core-lib/src/: lib.rs
libs/el-core-lib/src/api/: assets.rs  java.rs  manifest.rs  meta.rs  mod.rs
src/: main.cpp  webserver.hpp
